started popup - hyphens not working

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -44,10 +44,11 @@
     }
 
     &__list {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        @include absCenter;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%);
         list-style: none;
         text-align: center;
         width: 100%;
