--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -74,16 +74,17 @@
         left: 0;
 
         &::after {
+            @include absCenter;
             content: "";
             display: block;
             height: 1.3rem;
             width: 1.3rem;
             background-color: $color-primary;
             border-radius: 50%;
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
+            // position: absolute;
+            // top: 50%;
+            // left: 50%;
+            // transform: translate(-50%, -50%);
             opacity: 0;
             transition: opacity .2s;
         }
