start media queries

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -9,6 +9,14 @@
 html {
     //this defines what 1 rem is
     font-size: 62.5%;
+
+    @include respond(phone) {
+        font-size: 50%;
+    }
+
+
+
+    
 }
 
 body {
