--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
+/*
+0-600px:        Phone
+600-900px:      Tablet portrait
+900-1200px:     Tablet landscape
+
+[1200-1800px:   Normal styles apply]
+
+1800px +:       Big desktop
+
+
+
+$breakpoint argument choices
+- phone
+-tab-port
+- tab-land
+-big-desktop
+
+1em = 16px
+*/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -35,6 +54,9 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 37.5em) {
+    html {
+      font-size: 50%; } }
 
 body {
   box-sizing: border-box; }
