--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,14 +23,14 @@ html {
     @include respond(big-desktop) { //width > 1800?
         font-size: 75%; // 1rem = 12px, 12/16 = 75%
     }
-
-
-
-
-    
 }
 
 body {
     
     box-sizing: border-box;
+    padding: 3rem;
+
+    @include respond(tab-port) {
+        padding: 0;
+    }
 }
