--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -32,6 +32,11 @@ $breakpoint argument choices
 - tab-land
 -big-desktop
 
+
+WORK ORDER: base + typography > 
+    general layout + grid > 
+    page layout > components
+
 1em = 16px
 */ 
 
