--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -24,6 +24,11 @@ body {
         animation-name: moveInLeft;
         animation-duration: 1s;
         animation-timing-function: ease-out;
+
+        @include respond(phone) {
+            letter-spacing: 1rem;
+            font-size: 5rem;
+        }
     }
     
     
@@ -34,6 +39,10 @@ body {
         letter-spacing: 1.75rem;
     
         animation: moveInRight 1s ease-out;
+
+        @include respond(phone) {
+            letter-spacing: .5rem;
+        }
     }
 }
 
