all sections responsive except popup

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -21,7 +21,7 @@
             right: 4rem;
         }
 
-        @include respond(tab-port) {
+        @include respond(phone) {
             top: 3rem;
             right: 3rem;
         }
