--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -17,6 +17,11 @@
         display: block;
         transition: all .3s;
 
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
+
         &:focus {
             outline: none;
             box-shadow: 0 1rem 2rem rgba($color-black, .1);
@@ -50,6 +55,11 @@
     &__radio-group {
         width: 49%;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
@@ -81,10 +91,6 @@
             width: 1.3rem;
             background-color: $color-primary;
             border-radius: 50%;
-            // position: absolute;
-            // top: 50%;
-            // left: 50%;
-            // transform: translate(-50%, -50%);
             opacity: 0;
             transition: opacity .2s;
         }
