popup media query

--- a/css/style.css
+++ b/css/style.css
@@ -554,6 +554,9 @@ body {
   .popup__left {
     width: 33.333333%;
     display: table-cell; }
+    @media (max-width: 56.25em) {
+      .popup__left {
+        display: table-column; } }
   .popup__right {
     width: 66.666667%;
     display: table-cell;
@@ -562,6 +565,9 @@ body {
   .popup__img {
     display: block;
     width: 100%; }
+    @media (max-width: 56.25em) {
+      .popup__img {
+        display: none; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
