--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -29,6 +29,10 @@
         width: 33.333333%;
         display: table-cell;
     
+        @include respond(tab-port) {
+            display: table-column;
+            
+        }
     }
 
     &__right {
@@ -36,11 +40,17 @@
         display: table-cell;
         vertical-align: middle;
         padding: 3rem 5rem;
+
     }
 
     &__img {
         display: block;
         width: 100%;
+
+        @include respond(tab-port) {
+            display: none;
+            
+        }
     }
 
     &__text {
